force-app/main/default/objects/Template_Indicator_Assignment__c/Template_Indicator_Assignment__c.object-meta.xml
<CustomObject>
    <description
  >Editable runtime indicator assignment belonging to an assessment template.</description>
    <label>Template Indicator Assignment</label>
    <nameField>
        <label>Template Indicator Assignment Number</label>
        <displayFormat>TI-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Indicator Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>