force-app/main/default/objects/Template_Indicator_Assignment__c/fields/Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Template__c</fullName>
    <description
  >Runtime template that owns the indicator assignment row.</description>
    <label>Assessment Template</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipLabel>Indicator Assignments</relationshipLabel>
    <relationshipName>Indicator_Assignments</relationshipName>
    <type>MasterDetail</type>
</CustomField>