force-app/main/default/objects/Template_Indicator_Assignment__c/fields/Default_Severity_Scale__c.field-meta.xml
<CustomField>
    <fullName>Default_Severity_Scale__c</fullName>
    <description
  >Default severity-scale handling for the assignment.</description>
    <label>Default Severity Scale</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>