force-app/main/default/objects/Template_Indicator_Assignment__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description
  >Runtime help text shown for the indicator assignment.</description>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>