force-app/main/default/objects/Template_Indicator_Assignment__c/fields/Indicator_Key__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Key__c</fullName>
    <description>Stable indicator key assigned to the template.</description>
    <label>Indicator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>