force-app/main/default/objects/Template_Indicator_Assignment__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <description
  >Marks the indicator as required for assessment completeness.</description>
    <label>Is Required</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>