force-app/main/default/objects/Template_Indicator_Assignment__c/fields/Metadata_Row_Key__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Row_Key__c</fullName>
    <description
  >System-maintained packaged row key used for idempotent seed synchronization.</description>
    <externalId>true</externalId>
    <label>Metadata Row Key</label>
    <length>150</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>