force-app/main/default/objects/Template_Indicator_Assignment__c/fields/Visible_When_Rule__c.field-meta.xml
<CustomField>
    <fullName>Visible_When_Rule__c</fullName>
    <description
  >Optional visibility rule interpreted by the assessment-entry component.</description>
    <label>Visible When Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>